--- a/page3.html
+++ b/page3.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-<section id="ext_menu-4">
+<section id="ext_menu-7">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Web Builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-3" style="background-image: url(assets/images/jumbotron.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-after-navbar" id="header5-9" style="background-color: rgb(239, 239, 239);">
 
     
 
@@ -65,11 +65,11 @@
 
         <div class="container">
             <div class="row">
-                <div class="mbr-section col-md-10 col-md-offset-1 text-xs-center">
+                <div class="mbr-section col-md-10">
 
-                    <h1 class="mbr-section-title display-1">FULL SCREEN INTRO</h1>
-                    <p class="mbr-section-lead lead">Click any text to edit or style it. Click blue "Gear" icon in the top right corner to hide/show buttons, text, title and change the block background. <br> Click red "+" in the bottom right corner to add a new block. Use the top left menu to create new pages, sites and add extensions.</p>
-                    <div class="mbr-section-btn"><a class="btn btn-lg btn-primary" href="https://mobirise.com">DOWNLOAD FOR WINDOWS</a> <a class="btn btn-lg btn-white btn-white-outline" href="https://mobirise.com">DOWNLOAD FOR MAC</a></div>
+                    <h1 class="mbr-section-title display-1">SOLID COLOR INTRO</h1>
+                    <p class="mbr-section-lead lead">Full screen intro with color background.<br>Buttons, text and title are aligned to the left.</p>
+                    <div class="mbr-section-btn"><a class="btn btn-lg btn-primary" href="https://mobirise.com">DOWNLOAD NOW</a></div>
                 </div>
             </div>
         </div>
@@ -87,7 +87,6 @@
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touch-swipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/viewport-checker/jquery.viewportchecker.js"></script>
-  <script src="assets/jarallax/jarallax.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   
